# guild

./: .gitignore  DESIGN.md  README.md  flake.nix  guild.cabal
app/: Main.hs
examples/: metaswarm-full.toml
examples/dojolens/: dojolens-mvp.toml
examples/dojolens/agents/architect/: SOUL.md
examples/dojolens/agents/cv-engineer/: SOUL.md
examples/dojolens/agents/haskell-dev/: SOUL.md
examples/dojolens/agents/product-reviewer/: SOUL.md
examples/dojolens/agents/qa-engineer/: SOUL.md
examples/dojolens/agents/react-dev/: SOUL.md
examples/parallel-test/: parallel-test.toml
examples/parallel-test/agents/architect/: SOUL.md
examples/parallel-test/agents/completeness-reviewer/: SOUL.md
examples/parallel-test/agents/performance-reviewer/: SOUL.md
examples/parallel-test/agents/security-reviewer/: SOUL.md
examples/parallel-test/agents/synthesizer/: SOUL.md
src/Guild/: Generator.hs  Parser.hs  Resolver.hs  Types.hs
src/Guild/Runtime/: Beads.hs  Gate.hs  Machine.hs  SlotStore.hs  Types.hs
