cabal-version:      3.0
name:               guild
version:            0.1.0.0
synopsis:           Agent team orchestration framework
description:
  Guild reads a compact TOML team spec and generates Claude Code project
  scaffolding, then runs agent pipelines with named slot routing and gates.
license:            MIT
author:             Zoe
build-type:         Simple

common warnings
    ghc-options: -Wall -Wno-unused-do-bind

library
    import:           warnings
    exposed-modules:
        Guild.Types
        Guild.Parser
        Guild.Resolver
        Guild.Generator
        Guild.Runtime.Types
        Guild.Runtime.SlotStore
        Guild.Runtime.Gate
        Guild.Runtime.Machine
        Guild.Runtime.Beads
    build-depends:
        base          >= 4.18 && < 5,
        text          >= 2.0,
        toml-parser   >= 2.0.0.0,
        containers    >= 0.6,
        filepath      >= 1.4,
        directory     >= 1.3,
        bytestring    >= 0.11,
        sqlite-simple >= 0.4,
        uuid          >= 1.3,
        process       >= 1.6,
        time          >= 1.12,
        async         >= 2.2
    hs-source-dirs:   src
    default-language: GHC2021

executable guild
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base          >= 4.18 && < 5,
        guild,
        text          >= 2.0,
        filepath      >= 1.4,
        directory     >= 1.3,
        optparse-applicative >= 0.18,
        uuid          >= 1.3,
        time          >= 1.12
    hs-source-dirs:   app
    default-language: GHC2021
